<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="app_name">Peduli Bumil</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Nama</string>
    <string name="hint_password">Kata Sandi</string>
    <string name="hint_birth_date">Tanggal Lahir</string>
    <string name="register">DAFTAR</string>
    <string name="or">Atau</string>
    <string name="google_login">Lanjutkan dengan Akun Google</string>
    <string name="login_link">Sudah Memiliki Akun? Masuk Disini</string>
    <string name="register_link">Belum Memiliki Akun? Daftar Disini</string>
    <string name="title_article">Article</string>
    <string name="default_web_client_id">511713702149-4b2h1f8i30jo1jo2hskavrre7cnrpdcr.apps.googleusercontent.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_news">News</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="title_placeholder">Judul Artikel</string>
    <string name="source_placeholder">Sumber Artikel</string>
    <string name="date_placeholder">Tanggal</string>
    <string name="hi_username">Hi, Username</string>
    <string name="usia_kehamilan">Usia Kehamilan</string>
    <string name="resiko_kehamilan">Resiko Kehamilan</string>
    <string name="tekanan_darah">Tekanan Darah</string>
    <string name="tidak_normal">Tidak Normal</string>
    <string name="gula_darah">Gula Darah</string>
    <string name="usia">Umur</string>
    <string name="textsplash">PEDULI BUMIL</string>
    <string name="title_chatbot">Chatbot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="title_history">History</string>
    <string name="password_too_short">Password harus minimal 8 karakter</string>
</resources>