<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".auth.LoginActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"
        android:textColor="#FFB6C1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Profile Icon -->
    <ImageView
        android:id="@+id/ivProfileIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_input_field"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:hint="@string/hint_email"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivProfileIcon"
        app:layout_constraintWidth_percent="0.8" />

    <LinearLayout
        android:id="@+id/llPasswordContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <!-- Password Input -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:textSize="14sp"
            android:background="@drawable/bg_input_field"
            android:inputType="textPassword"
            android:layout_marginTop="12dp" />

        <!-- Forgot Password TextView -->
        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="lupa password? klik disini"
            android:textColor="#FFB6C1"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:layout_marginTop="4dp" />
    </LinearLayout>
    <!-- Login Button -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFB6C1"
        android:text="LOGIN"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llPasswordContainer"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Separator with Text -->
    <TextView
        android:id="@+id/tvSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Atau"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <LinearLayout
        android:id="@+id/llGoogleLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:background="@drawable/border_button"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSeparator"
        app:layout_constraintWidth_percent="0.8">

        <!-- Google Icon ImageView -->
        <ImageView
            android:id="@+id/ivGoogleIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_gg_foreground" />

        <!-- Google Login TextView, aligned to the right -->
        <TextView
            android:id="@+id/tvGoogleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/google_login"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_gravity="end|center_vertical"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="16sp"
            android:autoSizeStepGranularity="1sp" />
    </LinearLayout>

    <!-- Register Link at the Bottom -->
    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/gray"
        android:text="@string/register_link"
        android:textColor="#FFB6C1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
