<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC0D0"
    tools:context=".ui.home.HomeFragment" >

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="75dp"
        android:layout_height="67dp"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/login_banner_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <!-- Hi Username TextView -->
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/hi_username"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvUmur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usia"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="20dp"
        android:text="Prediksi Resiko"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvResiko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="40dp"
        android:text="Tampil Di Sini"
        android:textColor="@color/gray"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/tvKandungan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usia_kehamilan"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ivLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvUmur" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bottom_background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">


        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="140dp"
            tools:layout_editor_absoluteY="60dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_button_risk">

                        <ImageView
                            android:id="@+id/bgTB"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="8dp"
                            android:src="@drawable/circle_risk_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivTB"
                            android:layout_width="49dp"
                            android:layout_height="47dp"
                            android:src="@drawable/ic_height"
                            app:layout_constraintBottom_toBottomOf="@+id/bgTB"
                            app:layout_constraintEnd_toEndOf="@+id/bgTB"
                            app:layout_constraintStart_toStartOf="@+id/bgTB"
                            app:layout_constraintTop_toTopOf="@+id/bgTB" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tvTB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tidak Normal"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_button_risk">

                        <ImageView
                            android:id="@+id/bgBB"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="8dp"
                            android:src="@drawable/circle_risk_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivBB"
                            android:layout_width="49dp"
                            android:layout_height="47dp"
                            android:src="@drawable/ic_weight"
                            app:layout_constraintBottom_toBottomOf="@+id/bgBB"
                            app:layout_constraintEnd_toEndOf="@+id/bgBB"
                            app:layout_constraintStart_toStartOf="@+id/bgBB"
                            app:layout_constraintTop_toTopOf="@+id/bgBB" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tvBB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tidak Normal"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_button_risk">

                        <ImageView
                            android:id="@+id/bgSuhu"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="8dp"
                            android:src="@drawable/circle_risk_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivSuhu"
                            android:layout_width="49dp"
                            android:layout_height="47dp"
                            android:src="@drawable/ic_thermometer"
                            app:layout_constraintBottom_toBottomOf="@+id/bgSuhu"
                            app:layout_constraintEnd_toEndOf="@+id/bgSuhu"
                            app:layout_constraintStart_toStartOf="@+id/bgSuhu"
                            app:layout_constraintTop_toTopOf="@+id/bgSuhu" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tvSuhu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tidak Normal"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_button_risk">

                        <ImageView
                            android:id="@+id/bgTensi"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="8dp"
                            android:src="@drawable/circle_risk_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivTensi"
                            android:layout_width="49dp"
                            android:layout_height="47dp"
                            android:src="@drawable/ic_blood_pressure"
                            app:layout_constraintBottom_toBottomOf="@+id/bgTensi"
                            app:layout_constraintEnd_toEndOf="@+id/bgTensi"
                            app:layout_constraintStart_toStartOf="@+id/bgTensi"
                            app:layout_constraintTop_toTopOf="@+id/bgTensi" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tvTensi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tidak Normal"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_button_risk">

                        <ImageView
                            android:id="@+id/bgBloodS"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="8dp"
                            android:src="@drawable/circle_risk_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivBloodS"
                            android:layout_width="49dp"
                            android:layout_height="47dp"
                            android:src="@drawable/ic_diabetes"
                            app:layout_constraintBottom_toBottomOf="@+id/bgBloodS"
                            app:layout_constraintEnd_toEndOf="@+id/bgBloodS"
                            app:layout_constraintStart_toStartOf="@+id/bgBloodS"
                            app:layout_constraintTop_toTopOf="@+id/bgBloodS" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tvBloodS"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tidak Normal"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_button_risk">

                        <ImageView
                            android:id="@+id/bgHeartRate"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_margin="8dp"
                            android:src="@drawable/circle_risk_bg"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/ivHeartRate"
                            android:layout_width="49dp"
                            android:layout_height="47dp"
                            android:src="@drawable/ic_heartbeat"
                            app:layout_constraintBottom_toBottomOf="@+id/bgHeartRate"
                            app:layout_constraintEnd_toEndOf="@+id/bgHeartRate"
                            app:layout_constraintStart_toStartOf="@+id/bgHeartRate"
                            app:layout_constraintTop_toTopOf="@+id/bgHeartRate" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/tvHeartRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tidak Normal"
                        android:textAlignment="center"
                        android:textStyle="bold" />
                </LinearLayout>

            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/btnRisk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Cek Resiko!"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.8"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabChatbot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_chat"
        android:background="@drawable/fab_no_top_left_radius" />

</androidx.constraintlayout.widget.ConstraintLayout>